<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="login_account_hint">手机号</string>
    <string name="login_passwd_hint">密码</string>
    <string name="login_register">注册</string>
    <string name="login_login">登录</string>
    <string name="login_forget_passwd">忘记密码？</string>
    <string name="login_phone_ahead">+86</string>
    <string name="login_phone_input">请填写手机号码</string>
    <string name="login_next">下一步</string>
    <string name="login_phone_password">请填写密码</string>
    <string name="login_input_checknum">输入验证码</string>
    <string name="login_please_input_checknum">请输入验证码</string>
    <string name="login_phone_check">已经向%s发送一条短信，请输入短信中的验证码.</string>
    <string name="login_login_ok">密码可使用英文、数字或下划线，长度为6~16个字</string>
    <string name="passwd_hide_str">隐藏</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="app_name"></string>
    <string name="yq_weibo_friend_done">完成</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_input_checknum">InputChecknum</string>
    <string name="title_activity_set_phone_password">SetPhonePassword</string>

</resources>
