<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <include layout="@layout/view_titlebar" />
    <RelativeLayout
        android:background="#ffffffff"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp">
        <EditText
            android:textSize="15dp"
            android:id="@+id/view_password"
            android:background="@color/transparent"
            android:paddingLeft="16dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/login_phone_password"
            android:singleLine="true"
            android:layout_toLeftOf="@+id/transferBt"
            android:inputType="textMultiLine|textUri" />
        <Button
            android:textColor="@color/white"
            android:id="@+id/transferBt"
            android:background="@drawable/ctbshare_button_transfer_press"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/passwd_hide_str"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>
    <View
        android:background="@color/send_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp" />
    <TextView
        android:textColor="#ff666666"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="25dp"
        android:text="@string/login_login_ok" />
    <Button
        android:textColor="@color/white"
        android:id="@+id/setButton"
        android:background="@drawable/ctbshare_btn_green"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="23dp"
        android:layout_marginRight="15dp"
        android:text="@string/yq_weibo_friend_done" />

</LinearLayout>