<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <include layout="@layout/view_titlebar" />
    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="56dp">
        <TextView
            android:textColor="#ff333333"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/login_phone_ahead" />
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="2dp"
            android:layout_height="36dp"
            android:layout_marginLeft="19dp"
            android:src="#ffdcdcdc" />
        <EditText
            android:textSize="15dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/view_phone_num"
            android:background="#00000000"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="11dp"
            android:hint="@string/login_phone_input"
            android:singleLine="true" />
    </LinearLayout>
    <View
        android:background="@color/send_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp" />
    <Button
        android:textColor="@color/white"
        android:id="@+id/registerButton"
        android:background="@drawable/ctbshare_btn_green"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="13dp"
        android:layout_marginRight="25dp"
        android:text="@string/login_next" />

</LinearLayout>