<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <include layout="@layout/view_titlebar" />
    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="56dp">
        <EditText
            android:textSize="15dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/view_checknum"
            android:background="#00000000"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="11dp"
            android:hint="@string/login_please_input_checknum"
            android:singleLine="true"
            android:inputType="number" />
    </LinearLayout>
    <View
        android:background="@color/send_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp" />
    <TextView
        android:textColor="#ff666666"
        android:id="@+id/checkphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="25dp"
        android:text="@string/login_phone_check" />
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp">
        <Button
            android:textSize="19dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/nextButton"
            android:background="@drawable/ctbshare_btn_dialog_ok"
            android:layout_width="fill_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/login_next"
            android:layout_weight="1.0" />
    </LinearLayout>

</LinearLayout>