<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/view_titlebar" />
    <ScrollView
        android:scrollbars="none"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp">
        <RelativeLayout
            android:id="@+id/rl_login_activity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/loginLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <RelativeLayout
                    android:id="@+id/loginNameLy"
                    android:background="@drawable/ctbshare_login_bg"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_centerHorizontal="true">
                    <ImageView
                        android:id="@+id/loginIv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ctbshare_icon_login_name"
                        android:layout_centerVertical="true"
                        android:contentDescription="@null" />
                    <EditText
                        android:textSize="15dp"
                        android:id="@+id/loginName"
                        android:background="#00000000"
                        android:layout_width="fill_parent"
                        android:layout_height="55dp"
                        android:layout_marginLeft="11dp"
                        android:hint="@string/login_account_hint"
                        android:singleLine="true"
                        android:layout_toRightOf="@id/loginIv"
                        android:layout_centerVertical="true" />
                </RelativeLayout>
                <RelativeLayout
                    android:background="@drawable/ctbshare_login_bg"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginRight="15dp"
                    android:layout_below="@id/loginNameLy"
                    android:layout_centerHorizontal="true">
                    <ImageView
                        android:id="@+id/passwdIv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ctbshare_icon_login_passwd"
                        android:layout_centerVertical="true"
                        android:contentDescription="@null" />
                    <EditText
                        android:textSize="15dp"
                        android:id="@+id/loginPassword"
                        android:background="#00000000"
                        android:layout_width="fill_parent"
                        android:layout_height="55dp"
                        android:layout_marginLeft="11dp"
                        android:hint="@string/login_passwd_hint"
                        android:layout_toRightOf="@id/passwdIv"
                        android:layout_centerVertical="true"
                        android:inputType="textPassword" />
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="13dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true">
                        <TextView
                            android:textSize="12dp"
                            android:textColor="#ff666666"
                            android:id="@+id/forgetPasswd"
                            android:padding="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:text="@string/login_forget_passwd" />
                    </FrameLayout>
                </RelativeLayout>
            </RelativeLayout>
        <RelativeLayout
            android:id="@+id/snsLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="16dp"
            android:layout_below="@id/loginLayout">
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/localLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="19dp"
                    android:textColor="#ff333333"
                    android:gravity="center"
                    android:id="@+id/registerTv"
                    android:background="@drawable/ctbshare_btn_register"
                    android:layout_width="fill_parent"
                    android:layout_height="43dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/login_register"
                    android:layout_weight="1.0" />
                <TextView
                    android:textSize="19dp"
                    android:textColor="#ffffffff"
                    android:gravity="center"
                    android:id="@+id/loginTv"
                    android:background="@drawable/ctbshare_btn_dialog_ok"
                    android:layout_width="fill_parent"
                    android:layout_height="43dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/login_login"
                    android:layout_weight="1.0" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
    </ScrollView>
</LinearLayout>